[project]
name = "misarch-chaostoolkit-container"
version = "0.1.0"  
description = "Container with basic extensions for Chaos Toolkit"
dependencies = [
    "chaostoolkit>=1.17.1",
    "pip>=23.3.2",
    "docker>=7.1.0",
    "requests>=2.32.3",
    "Flask>=2.3.3",
]
requires-python = ">=3.11"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

extensions = [
    "chaostoolkit-aws>=0.29.0",
    "chaostoolkit-kubernetes>=0.34.1",
    "chaostoolkit-google-cloud-platform>=0.14.1",
    "chaostoolkit-prometheus>=0.6.0",
    "chaostoolkit-toxiproxy>=0.3.1",
    "chaostoolkit-opentracing>=0.16.1",
    "chaostoolkit-addons>=0.9.0",
    "chaostoolkit-slack>=0.10.0",
]