[project]
name = "misarch-chaostoolkit-container"
version = "0.1.0"  
description = "Container with basic extensions for Chaos Toolkit"
dependencies = [
    "chaostoolkit>=1.17.1",
    "pip>=23.3.2",
    "docker>=7.1.0",
    "requests>=2.32.3",
    "Flask>=2.3.3",
    "chaostoolkit-kubernetes>=0.39.0",
    "chaostoolkit-aws>=0.35.1",
    "chaostoolkit-kubernetes>=0.39.0",
    "chaostoolkit-google-cloud-platform>=0.37.0",
    "chaostoolkit-prometheus>=0.6.0",
    "chaostoolkit-toxiproxy>=0.3.1",
    "chaostoolkit-addons>=0.11.0",
    "chaostoolkit-slack>=0.10.0",
]
requires-python = ">=3.13"

[tool.pdm]
package = { include = "misarch_chaostoolkit" }